Merged MCP and MCPRoot. Created a thread for sending to the server wand modified code to add MCPCommands to the output queue rather than try to send them from whatever thread they happen to be in.